# funee

./: Cargo.toml  HOST_FUNCTIONS_DESIGN.md  HOST_FUNCTIONS_SPEC.md  README.md
.github/workflows/: release.yml
docs/: RELEASE_PROCESS.md  SELF_HOSTED_RUNTIME_SPEC.md
examples/: demo.ts  github-stats.ts  validator-demo.ts
examples/watch-demo/: debug.ts  math.test.ts
funee-lib/: index.ts
funee-lib/filesystem/: isFile.ts  lstat.ts  readFile.ts  readFileBinary.ts  readdir.ts  tempDir.ts  writeFile.ts  writeFileBinary.ts
funee-lib/host/: console.d.ts  crypto.d.ts  fs.d.ts  http.d.ts  index.d.ts  process.d.ts  server.d.ts  time.d.ts  watch.d.ts
funee-lib/http/: fetch.ts  httpFetch.ts  httpRequest.ts
funee-lib/memoize/: memoizeInFS.ts
funee-lib/os/: tmpdir.ts
funee-lib/process/: index.ts
funee-lib/random/: cryptoRandomString.ts
funee-lib/server/: serve.ts
funee-lib/watcher/: index.ts
scripts/: prepare-sut.sh  run-self-hosted.sh
src/: main.rs
src/execution_request/: declaration.rs  get_references_from_declaration.rs  source_graph.rs  source_graph_to_js_execution_code.rs  tests.rs
tests/: cli.test.ts
tests/fixtures/macro/: array_macro.ts  conditional_macro.ts  conditional_macro_already_multiplied.ts  debug_sequence_macro.ts  introspection_macro.ts  member_macro.ts  multi_arg_compare.ts  object_macro.ts  references_introspection.ts  variadic_numeric_count.ts
tests/self-hosted/: _sut.ts  basic.ts  misc.ts
