[package]
name = "funee"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22"
deno_core = "0.386"
deno_error = "0.7"
petgraph = "0.6"
sourcemap = "9"
swc_common = { version = "18", features = ["sourcemap"] }
swc_ecma_ast = "20"
swc_ecma_codegen = "23"
swc_ecma_parser = "34"
swc_ecma_transforms_base = "37"
swc_ecma_transforms_typescript = "41"
swc_ecma_utils = "26"
swc_ecma_visit = "20"
swc_atoms = "9"
bytes-str = "0.2"
relative-path = "1.9"
tokio = { version = "1", features = ["full"] }

# HTTP imports
reqwest = { version = "0.12", features = ["blocking"] }
url = "2.5"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"

# Random
rand = "0.9"
hex = "0.4"

# File watching
notify = { version = "6.1", default-features = false, features = ["macos_fsevent"] }

# HTTP server
hyper = { version = "1.0", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto"] }
http-body-util = "0.1"
bytes = "1.0"

# Unix process signals
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }
